--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "msw": "^0.39.2",
     "vite": "^2.9.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
